--- a/week-007/week-07-class-03-lab/week-07-class-03-lab.ipynb
+++ b/week-007/week-07-class-03-lab/week-07-class-03-lab.ipynb
@@ -34,23 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'add_two_numbers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/06/hfzf9lp56zd43dhrhwknv5lh0000gn/T/ipykernel_23685/4094099063.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0madd_two_numbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter a number: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter another number: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'add_two_numbers'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0 + 5.0 = 9.0\n"
      ]
     }
    ],
    "source": [
-    "import add_two_numbers\n",
+    "from scripts.add_two_numbers import summing\n",
     "\n",
     "a = float(input(\"Enter a number: \", ))\n",
     "b = float(input(\"Enter another number: \", ))\n",
@@ -73,30 +69,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'multiplying' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/06/hfzf9lp56zd43dhrhwknv5lh0000gn/T/ipykernel_23685/2634050725.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter another number: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mthe_multiplication_of_two_numbers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmultiplying\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{a} + {b} = {the_multiplication_of_two_numbers}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'multiplying' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 x 4 = 20\n"
      ]
     }
    ],
    "source": [
-    "import multiply_two_numbers as axb\n",
+    "from scripts.one_more_folder.multiply_two_numbers import multiplying\n",
     "\n",
     "a = int(input(\"Enter a number: \", ))\n",
     "b = int(input(\"Enter another number: \", ))\n",
     "\n",
     "the_multiplication_of_two_numbers = multiplying(a,b)\n",
     "\n",
-    "print(f'{a} + {b} = {the_multiplication_of_two_numbers}')"
+    "print(f'{a} x {b} = {the_multiplication_of_two_numbers}')"
    ]
   },
   {
@@ -110,23 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (580547711.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/06/hfzf9lp56zd43dhrhwknv5lh0000gn/T/ipykernel_23685/580547711.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    from divide_two_numbers\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a:  4\n",
+      "This is b:  5\n",
+      "Result of addition:  9\n",
+      "Result of subtraction:  -1\n",
+      "Result of multiplication:  20\n",
+      "Result of division:  0.8\n"
      ]
     }
    ],
    "source": [
-    "from add_two_numbers import summing\n",
-    "import scripts.subtract_two_numbers\n",
-    "import multiplying\n",
-    "from divide_two_numbers\n",
+    "from scripts.add_two_numbers import summing\n",
+    "from scripts.subtract_two_numbers import subtracting\n",
+    "from scripts.one_more_folder.multiply_two_numbers import multiplying\n",
+    "from divide_two_numbers import dividing\n",
     "\n",
     "class Math_Operations:\n",
     "  def __init__(self, a, b):\n",
@@ -138,7 +134,7 @@
     "      return c\n",
     "\n",
     "  def subtract_something(self):\n",
-    "      d = s2n.subtracting(self.a,self.b)\n",
+    "      d = subtracting(self.a,self.b)\n",
     "      return d\n",
     "\n",
     "  def multiply_something(self):\n",
