--- a/week-008/week_08_class_01_lab.ipynb
+++ b/week-008/week_08_class_01_lab.ipynb
@@ -1,30 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.4"
-    },
-    "colab": {
-      "name": "week-08-class-01-lab.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -50,7 +24,9 @@
       "source": [
         "# Question 1\n",
         "\n",
-        "What is the use of read() function in Python? Why it is important?"
+        "What is the use of read() function in Python? Why it is important?\n",
+        "\n",
+        "The read() function in pyton allows us to read the whole contents of a file in a string format, unless given an argument to read specified bytes. It is important because it can read different types of files and make accessibility easier.  "
       ]
     },
     {
@@ -69,6 +45,24 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "It's time to read in python!\n"
+          ]
+        }
+      ],
+      "source": [
+        "with open('reading_python.ipynb.txt') as f:\n",
+        "    print(f.read())"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "fzpO6jPxFH7f"
@@ -82,14 +76,40 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "GaJ9r_AO7ANd"
       },
-      "source": [
-        ""
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "import webbrowser\n",
+        "\n",
+        "var_1 = open(\"file_hello_world.html\", \"w\")\n",
+        "file_content = '''  \n",
+        "<html>\n",
+        "<head></head>\n",
+        "<body> \n",
+        "<p>Hello world </p>\n",
+        "<img src = \"coding.jpeg\" alt= \"love coding\">\n",
+        "</body>\n",
+        "</html>\n",
+        "'''\n",
+        "\n",
+        "var_1.write(file_content)\n",
+        "var_1.close()\n",
+        "webbrowser.open_new_tab(\"file_hello_world.html\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -107,5 +127,33 @@
         "\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "week-08-class-01-lab.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.5 64-bit",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.5"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
